--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-<<<<<<< HEAD
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -36,13 +35,10 @@
     />
 
     <title>React App</title>
-=======
     <title>Wazwork Company</title>
->>>>>>> e1649be508d5f974176fd964a165122deeb88582
   </head>
   <body>
     <div id="root"></div>
-<<<<<<< HEAD
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -62,7 +58,7 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-=======
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -76,8 +72,9 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
->>>>>>> e1649be508d5f974176fd964a165122deeb88582
-      crossorigin="anonymous"
-    ></script>
+    >
+      e1649be508d5f974176fd964a165122deeb88582
+           crossorigin="anonymous"
+    </script>
   </body>
 </html>
